src/rust/parser/src/emit/snapshots/starlightr_parser__emit__mdx__tests__can_emit_rd_files@hyperion-tables-section-rules.Rd.snap
---
source: parser/src/emit/mdx.rs
expression: "emit_document(document, &EmitOptions::default(), source).unwrap()"
input_file: parser/test_data/hyperion-tables-section-rules.Rd
---
---
title: "Create section assignment rules"
description: "Creates rules for assigning parameters to named sections in the output table. Rules are evaluated after name transformation, so you can match on the final displ"
sidebar:
  label: "section_rules"
pagefind: false
---

## Name

section_rules


## Alias

section_rules


## Title

Create section assignment rules


## Usage

```r
section_rules(...)
```

## Arguments

<div class="arg-table">
<table>
<thead>
<tr><th>Argument</th><th>Description</th></tr>
</thead>
<tbody>
<tr>
<td><code>...</code></td>
<td>Formula expressions following dplyr::case_when() syntax, `kind == "THETA" ~ "Structural Parameters"`</td>
</tr>
</tbody>
</table>
</div>


## Value

List of quosures for use in TableSpec


## Description

Creates rules for assigning parameters to named sections in the output table.
Rules are evaluated after name transformation, so you can match on the final
display name or use the preserved `nonmem_name` and `user_name` columns.


## Available columns

The following columns are available for use in section rules:
- `nonmem_name` - NONMEM identifier ("THETA1", "OMEGA(1,1)")
- `user_name` - User name from control file comments ("CL", "OM1")
- `name` - Display name (depends on `parameter_names` setting)
- `kind` - Parameter type: "THETA", "OMEGA", or "SIGMA"
- `diagonal` - TRUE for diagonal matrix elements (variance), FALSE for off-diagonal (covariance)
- `fixed` - TRUE if parameter is fixed



## Examples

```r
section_rules(
  grepl("~", user_name) ~ "Covariate Effects",
  kind == "THETA" ~ "Structural Parameters",
  kind == "OMEGA" & diagonal ~ "Between-Subject Variability",
  kind == "SIGMA" ~ "Residual Variability"
)
```
