src/rust/parser/src/emit/snapshots/starlightr_parser__emit__mdx__tests__can_emit_rd_files@scicalc-bmic.Rd.snap
---
source: parser/src/emit/mdx.rs
expression: "emit_document(document, &EmitOptions::default(), source).unwrap()"
input_file: parser/test_data/scicalc-bmic.Rd
---
---
title: "Categorize Body Mass Index"
description: "Categorizes individuals based on their Body Mass Index (BMI) according to standard WHO obesity classification criteria. Validates age to ensure appropriate appl"
sidebar:
  label: "bmic"
pagefind: false
---

## Name

bmic


## Alias

bmic


## Title

Categorize Body Mass Index


## Usage

```r
bmic(bmi, age)
```

## Arguments

<div class="arg-table">
<table>
<thead>
<tr><th>Argument</th><th>Description</th></tr>
</thead>
<tbody>
<tr>
<td><code>bmi</code></td>
<td>Numeric vector of baseline Body Mass Index values (kg/m²)</td>
</tr>
<tr>
<td><code>age</code></td>
<td>Numeric vector of baseline age in years. the function will issue warnings for individuals under 18 years old, as adult BMI categories may not be appropriate for pediatric populations</td>
</tr>
</tbody>
</table>
</div>


## Value

Integer vector of obesity categories (1-6). Returns the value of
`getOption("scicalc.missing_value")` (default `-999`) for
missing BMI values.


## Description

Categorizes individuals based on their Body Mass Index (BMI) according to
standard WHO obesity classification criteria. Validates age
to ensure appropriate application of adult BMI categories.


## Details

**BMI Categories:**
- 1: Underweight: BMI \< 18.5 kg/m²
- 2: Normal weight: BMI 18.5 to \< 25 kg/m²
- 3: Overweight: BMI 25 to \< 30 kg/m²
- 4: Obese class 1: BMI 30 to \< 35 kg/m²
- 5: Obese class 2: BMI 35 to \< 40 kg/m²
- 6: Obese class 3: BMI >= 40 kg/m²


**Age Considerations:**
The function will warn if any individuals are under
18 years old, as standard adult BMI categories may not be appropriate for
children and adolescents.


## Examples

```r
patients <- data.frame(
  ID = 1:6,
  AGE = c(25, 45, 17, 55, 30, 65),
  WEIGHT = c(60, 80, 70, 90, 75, 85),
  HEIGHT = c(165, 175, 170, 180, 160, 175)
)

dplyr::mutate(
 patients,
  BMI = bmi(WEIGHT, HEIGHT),
  BMIC = bmic(BMI, AGE)
)
```

## References

World Health Organization.
https://www.who.int/news-room/fact-sheets/detail/obesity-and-overweight


## See Also

[`bmi`](../bmi/) for calculating BMI from weight and height,
[`agec`](../agec/) for age categorization

Other body_composition: 
[`aibw()`](../aibw/),
[`bmi()`](../bmi/),
[`bsa()`](../bsa/),
[`dubois_bsa()`](../dubois_bsa/),
[`ibw()`](../ibw/),
[`mosteller_bsa()`](../mosteller_bsa/)


## Concept

body_composition
