src/rust/parser/src/emit/snapshots/starlightr_parser__emit__mdx__tests__can_emit_rd_files@test-enumerate.Rd.snap
---
source: parser/src/emit/mdx.rs
expression: "emit_document(document, &EmitOptions::default()).unwrap()"
input_file: parser/test_data/test-enumerate.Rd
---
---
title: "test function"
description: "1. First item 1. Second item."
pagefind: false
---


## Usage

```r
a()
```

## Description

1. First item
1. Second item
